--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Final_year_Project main.cpp)
 
-add_executable(main1 main1.cpp)
+add_executable(GBC_Single_Thread GBC_Single_Thread.cpp)
 
 add_executable(GBC GBC.cpp)
+add_executable(BetweennessCentrality BetweennessCentrality.cpp)
